--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,1 +1,19 @@
+## 동시에 같은 DB Table row 를 업데이트 하는 상황을 방어하기 위해 어떻게 개발하실 건지 설명해주세요.
 
+DB는 일단적으로 여러개의 connection이 생성되어 read/write를 할 수 있도록 되어있다.
+하지만 같은 부분에 대해서 동시에 write가 발생하게 되는 경우 문제가 발생할 수 있다.
+이것을 방지하기 위해서 다음과 같은 방법이 있을 것 같다.
+나는 주로 postgreSql을 활용했기 때문에 postgreSql을 기준으로 작성해보겠다.
+
+첫째로 DB의 lock 기능을 활용한다.
+동시성에 민감한 정보를 생성 혹은 갱신할 경우에는 lock을 걸어두고 다른 세션들은 대기하도록 한다.
+이 lock은 필요에 따라서 데이터베이스 객체나 행 단위로 락을 설정할 수 있다.
+lock을 사용할 때는 주의해야하며 오버헤드가 발생하지 않도록 해야한다.
+
+둘째로 transaction을 이용하는 방법이 있다.
+Transaction을 사용하여 실행하고자 하는 동작을 그룹화해 실행시켜 일관성있게 유지시킬 수 있다.
+Transaction을 이용할 때에는 격리 수준을 설정할 수 있는데 PostgreSql에서는 `READ UNCOMMITTED`, `READ COMMITTED`, `REPEATABLE READ`, `SERIALIZABLE`와 같은 격리 수준을 지원한다.
+적절한 격리 수준 설정은 동시성 문제 해결에 도움이 되지만 성능 저하에 영향을 끼칠 수 있기 때문에 유의해서 사용한다.
+Transaction을 사용할 때에는 반드시 완료 후 생성된 connection을 release 해주어야 한다.
+
+세부적인 사항은 DB의 종류마다 다를 수 있겠지만 기본적인 사용방법은 동일할 것으로 생각된다.
