--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,11 @@
+## TCP 와 UDP 의 차이를 작성해주세요.
 
+TCP는 Transmission Control Protocol, UDP는 User Datagram Protocol로 두가지 모두 네트워크 통신을 위한 프로토콜이다.
+두가지 프로토콜의 차이점 몇가지를 적어보자면 다음과 같다.
+
+1. TCP는 연결 지향적이고 UDP는 비연결성을 가진다.
+   - TCP는 연결 지향 프로토콜로, 데이터를 주고받기 전에 먼저 연결을 설정한다. 연결 설정 후에는 데이터가 신뢰성 있게 전달되며, 데이터 손실, 순서 오류, 중복 데이터 등을 방지한다.
+   - UDP는 비연결성 프로토콜로, 연결 설정 없이 데이터를 전송한다. UDP는 데이터를 전송하는 즉시 송신자에서 수신자로 데이터를 보내며, 데이터 전달의 신뢰성은 보장되지 않는다.
+2. 신뢰성
+   - TCP는 데이터의 신뢰성을 중요시하며, 데이터의 손실을 최소화하고 데이터의 순서를 보장합한다. 데이터 패킷이 손실된 경우 재전송을 시도하며, 중복 데이터를 제거한다.
+   - UDP는 데이터의 신뢰성을 제공하지 않는다. 데이터가 손실되어도 재전송을 시도하지 않으며, 데이터의 순서를 보장하지 않는다. 이는 실시간 스트리밍, 게임 및 DNS 쿼리와 같은 응용 프로그램에서 신속한 데이터 전송이 중요한 경우에 유용하다.
