--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,1 +1,6 @@
+## 본인이 주력으로 사용하는 언어에서 설계적 결함 한 가지를 작성해주세요.
 
+최근 주로 사용하는 언어는 `typescript`이기 때문에 `typescript`의 결함 한가지를 적어보자면 다음과 같다.
+TypeScript는 type을 지정할 수 있다.
+Type을 사용하면 타입 검사를 통해 코드 안정성을 유지할 수 있지만, 특정 상황에서는 타입 시스템이 원하는 동작을 어렵게 만들 수 있다. 
+사용자가 type을 입력하지 않은 변수의 type을 예측하거나 혹은 any를 사용해서 어떤 타입이 와도 타입 처리를 하지 않는 등의 상황이 벌어질 수 있으며, 이는 기대했던 타입 안정성을 감소시킬 수 있다.
